Removed some rules Reordered slides in demo Added icons and disable to demo, and fixed the flickering effect

--- a/src/demo/demo.css
+++ b/src/demo/demo.css
@@ -1,23 +1,34 @@
 body {
-  cursor: url('https://ionicframework.com/img/finger.png'), auto;
+    cursor: url('https://ionicframework.com/img/finger.png'), auto;
 }
 
 .swiper-container {
-  width: 100%;
-  height: 10%;
+    width: 100%;
+    height: 10%;
+}
+
+
+.swiper-container .button.icon {
+    position: absolute;
+    left: 10px;
+    top:8px;
+}
+
+.swiper-container .central-item,
+.swiper-container .side-item {
+    width: 100%;
 }
 
 .swiper-container .central-item {
-  width: 100%;
+    padding-left: 55px;
 }
 
 .swiper-container .side-item {
-  width: 100%;
-  max-width: 40%;
-  background-color: #2C8DFB;
-  color: #fff;
+    max-width: 40%;
+    background-color: #2C8DFB;
+    color: #fff;
 }
 
-.swiper-container .selected .central-item{
-  background: rgba(0,0,0,0.1);
+.swiper-container .selected .central-item {
+    background: rgba(0, 0, 0, 0.1);
 }
